force-app/main/default/objects/Embryo_Cycle_Event__c/Embryo_Cycle_Event__c.object-meta.xml
<CustomObject>
    <label>Embryo Cycle Event</label>
    <nameField>
        <displayFormat>EMCV{00000}</displayFormat>
        <label>Embryo Cycle Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Embryo Cycle Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>