force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Active_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Active_Cycle__c</fullName>
    <formula>IF(
    OR(
        TEXT(Cycle__r.Status__c) = &quot;In Cycle&quot;,
        TEXT(Cycle__r.Status__c) = &quot;WFPT&quot;,
        TEXT(Cycle__r.Status__c) = &quot;Awaiting Clinical Pregnancy&quot;
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Cycle</label>
    <type>Checkbox</type>
</CustomField>