force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Cycle_Day_Fate__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Day_Fate__c</fullName>
    <label>Fate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>