force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Day_3_Consolidated_Grade__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Consolidated_Grade__c</fullName>
    <formula>Embryo__r.Day_3_Consolidated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 3 Consolidated Grade</label>
    <type>Text</type>
</CustomField>