force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Day_6_Consolidated_Grade__c.field-meta.xml
<CustomField>
    <fullName>Day_6_Consolidated_Grade__c</fullName>
    <formula>Embryo__r.Day_7_Consolidated_Grade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 6 Consolidated Grade</label>
    <type>Text</type>
</CustomField>