force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Embryo__c.field-meta.xml
<CustomField>
    <fullName>Embryo__c</fullName>
    <label>Embryo</label>
    <referenceTo>Embryos__c</referenceTo>
    <relationshipLabel>Embryo Cycle Events</relationshipLabel>
    <relationshipName>Embryo_Cycle_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>