force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Embryo_Number__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Number__c</fullName>
    <formula>TEXT(Embryo__r.Embryo_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Embryo Number</label>
    <type>Text</type>
</CustomField>