force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Insemination_Method__c.field-meta.xml
<CustomField>
    <fullName>Insemination_Method__c</fullName>
    <formula>TEXT( Embryo__r.Insem_Method__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insemination Method</label>
    <type>Text</type>
</CustomField>