force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Most_Recent_Consolidated_Grade__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Consolidated_Grade__c</fullName>
    <formula>Embryo__r.Most_Recent_Consolidated_Grade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Consolidated Grade</label>
    <type>Text</type>
</CustomField>