force-app/main/default/objects/Embryo_Cycle_Event__c/fields/PGT_Result__c.field-meta.xml
<CustomField>
    <fullName>PGT_Result__c</fullName>
    <formula>TEXT(Embryo__r.PGT_Results__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGT Result</label>
    <type>Text</type>
</CustomField>