force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Post_Thaw_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Cell_Number__c</fullName>
    <label>Post Thaw Cell Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>