force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Post_Thaw_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Expansion__c</fullName>
    <label>Post Thaw Expansion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>