force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Post_Thaw_Survival__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Survival__c</fullName>
    <label>Post Thaw Survival</label>
    <length>255</length>
    <type>Text</type>
</CustomField>