force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Static_Fate_Event__c.field-meta.xml
<CustomField>
    <fullName>Static_Fate_Event__c</fullName>
    <formula>Cycle_Day_Fate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Static Fate</label>
    <type>Text</type>
</CustomField>